# timholmes-submission

./: .gitignore  README.md  docker-compose.yaml  palindrome.md
backend/: Dockerfile  palindrome.py  pyproject.toml
backend/server/: main.py
backend/server/api/: health.py  qualifying_offer.py
backend/server/models/: player.py  player_list.py
backend/server/openapi/: specs.yaml
backend/server/resource/: offers.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  rgbaColor.js
