[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tim Holmes <timholmez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_cors = "^3.0.8"
requests = "^2.23.0"
influxdb = "^5.3.0"
gunicorn = "^20.0.4"
connexion = "^2.7.0"
aio_pika = "^6.6.1"
aiormq = "^3.2.2"
asyncio = "^3.4.3"
influxdb-client = "^1.7.0"
pymongo = "^3.10.1"
dnspython = "^1.16.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-watch = "^4.2.0"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
